src/components/stepper/Stepper.scss
.stepper-container {
  padding: unset;

  ul {
    padding-inline-start: 0px;
  }
}

.stepper li {
  list-style-type: none;
  float: left;
  position: relative;
  text-align: center;
}

.stepper li:before {
  content: " ";
  line-height: 30px;
  border-radius: 50%;
  width: 17px;
  height: 17px;
  border: 1px solid rgb(252, 244, 244);
  border-left: none;
  display: block;
  text-align: center;
  margin: 8.5px auto 0px;
  background-color: rgb(252, 244, 244);
}
.stepper li:after {
  content: "";
  position: absolute;
  width: 100%;
  height: 5px;
  background-color: rgb(252, 244, 244);
  border: 1px solid rgb(252, 244, 244);
  border-right: none;
  top: 15px;
  left: -50%;
  z-index: -1;
}

.stepper li:first-child:after {
  content: none;
}

.stepper li.active {
  // color: rgb(7, 7, 7);
}

.stepper li.active:before {
  border-color: rgb(198, 230, 16);
  background-color: rgb(198, 230, 16);
}

.stepper .active:after {
  background-color: rgb(198, 230, 16);
}

.new-segment:after {
  background-color: unset !important;
  border: unset !important;
}

